Package_Tools/glib/Package_Tools/include-C/glib-2.0/glib/in_arbeit/gunicode.h


typedef guint32 gunichar;
typedef enum
{
  G_UNICODE_CONTROL,
  G_UNICODE_FORMAT,
  G_UNICODE_UNASSIGNED,
  G_UNICODE_PRIVATE_USE,
  G_UNICODE_SURROGATE,
  G_UNICODE_LOWERCASE_LETTER,
  G_UNICODE_MODIFIER_LETTER,
  G_UNICODE_OTHER_LETTER,
  G_UNICODE_TITLECASE_LETTER,
  G_UNICODE_UPPERCASE_LETTER,
  G_UNICODE_SPACING_MARK,
  G_UNICODE_ENCLOSING_MARK,
  G_UNICODE_NON_SPACING_MARK,
  G_UNICODE_DECIMAL_NUMBER,
  G_UNICODE_LETTER_NUMBER,
  G_UNICODE_OTHER_NUMBER,
  G_UNICODE_CONNECT_PUNCTUATION,
  G_UNICODE_DASH_PUNCTUATION,
  G_UNICODE_CLOSE_PUNCTUATION,
  G_UNICODE_FINAL_PUNCTUATION,
  G_UNICODE_INITIAL_PUNCTUATION,
  G_UNICODE_OTHER_PUNCTUATION,
  G_UNICODE_OPEN_PUNCTUATION,
  G_UNICODE_CURRENCY_SYMBOL,
  G_UNICODE_MODIFIER_SYMBOL,
  G_UNICODE_MATH_SYMBOL,
  G_UNICODE_OTHER_SYMBOL,
  G_UNICODE_LINE_SEPARATOR,
  G_UNICODE_PARAGRAPH_SEPARATOR,
  G_UNICODE_SPACE_SEPARATOR
} GUnicodeType;
typedef enum
{
  G_UNICODE_BREAK_MANDATORY,
  G_UNICODE_BREAK_CARRIAGE_RETURN,
  G_UNICODE_BREAK_LINE_FEED,
  G_UNICODE_BREAK_COMBINING_MARK,
  G_UNICODE_BREAK_SURROGATE,
  G_UNICODE_BREAK_ZERO_WIDTH_SPACE,
  G_UNICODE_BREAK_INSEPARABLE,
  G_UNICODE_BREAK_NON_BREAKING_GLUE,
  G_UNICODE_BREAK_CONTINGENT,
  G_UNICODE_BREAK_SPACE,
  G_UNICODE_BREAK_AFTER,
  G_UNICODE_BREAK_BEFORE,
  G_UNICODE_BREAK_BEFORE_AND_AFTER,
  G_UNICODE_BREAK_HYPHEN,
  G_UNICODE_BREAK_NON_STARTER,
  G_UNICODE_BREAK_OPEN_PUNCTUATION,
  G_UNICODE_BREAK_CLOSE_PUNCTUATION,
  G_UNICODE_BREAK_QUOTATION,
  G_UNICODE_BREAK_EXCLAMATION,
  G_UNICODE_BREAK_IDEOGRAPHIC,
  G_UNICODE_BREAK_NUMERIC,
  G_UNICODE_BREAK_INFIX_SEPARATOR,
  G_UNICODE_BREAK_SYMBOL,
  G_UNICODE_BREAK_ALPHABETIC,
  G_UNICODE_BREAK_PREFIX,
  G_UNICODE_BREAK_POSTFIX,
  G_UNICODE_BREAK_COMPLEX_CONTEXT,
  G_UNICODE_BREAK_AMBIGUOUS,
  G_UNICODE_BREAK_UNKNOWN,
  G_UNICODE_BREAK_NEXT_LINE,
  G_UNICODE_BREAK_WORD_JOINER,
  G_UNICODE_BREAK_HANGUL_L_JAMO,
  G_UNICODE_BREAK_HANGUL_V_JAMO,
  G_UNICODE_BREAK_HANGUL_T_JAMO,
  G_UNICODE_BREAK_HANGUL_LV_SYLLABLE,
  G_UNICODE_BREAK_HANGUL_LVT_SYLLABLE,
  G_UNICODE_BREAK_CLOSE_PARANTHESIS,
  G_UNICODE_BREAK_CONDITIONAL_JAPANESE_STARTER,
  G_UNICODE_BREAK_HEBREW_LETTER,
  G_UNICODE_BREAK_REGIONAL_INDICATOR,
  G_UNICODE_BREAK_EMOJI_BASE,
  G_UNICODE_BREAK_EMOJI_MODIFIER,
  G_UNICODE_BREAK_ZERO_WIDTH_JOINER,
  G_UNICODE_BREAK_AKSARA,
  G_UNICODE_BREAK_AKSARA_PRE_BASE,
  G_UNICODE_BREAK_AKSARA_START,
  G_UNICODE_BREAK_VIRAMA_FINAL,
  G_UNICODE_BREAK_VIRAMA
} GUnicodeBreakType;
typedef enum
{                         
  G_UNICODE_SCRIPT_INVALID_CODE = -1,
  G_UNICODE_SCRIPT_COMMON       = 0,   
  G_UNICODE_SCRIPT_INHERITED,          
  G_UNICODE_SCRIPT_ARABIC,             
  G_UNICODE_SCRIPT_ARMENIAN,           
  G_UNICODE_SCRIPT_BENGALI,            
  G_UNICODE_SCRIPT_BOPOMOFO,           
  G_UNICODE_SCRIPT_CHEROKEE,           
  G_UNICODE_SCRIPT_COPTIC,             
  G_UNICODE_SCRIPT_CYRILLIC,           
  G_UNICODE_SCRIPT_DESERET,            
  G_UNICODE_SCRIPT_DEVANAGARI,         
  G_UNICODE_SCRIPT_ETHIOPIC,           
  G_UNICODE_SCRIPT_GEORGIAN,           
  G_UNICODE_SCRIPT_GOTHIC,             
  G_UNICODE_SCRIPT_GREEK,              
  G_UNICODE_SCRIPT_GUJARATI,           
  G_UNICODE_SCRIPT_GURMUKHI,           
  G_UNICODE_SCRIPT_HAN,                
  G_UNICODE_SCRIPT_HANGUL,             
  G_UNICODE_SCRIPT_HEBREW,             
  G_UNICODE_SCRIPT_HIRAGANA,           
  G_UNICODE_SCRIPT_KANNADA,            
  G_UNICODE_SCRIPT_KATAKANA,           
  G_UNICODE_SCRIPT_KHMER,              
  G_UNICODE_SCRIPT_LAO,                
  G_UNICODE_SCRIPT_LATIN,              
  G_UNICODE_SCRIPT_MALAYALAM,          
  G_UNICODE_SCRIPT_MONGOLIAN,          
  G_UNICODE_SCRIPT_MYANMAR,            
  G_UNICODE_SCRIPT_OGHAM,              
  G_UNICODE_SCRIPT_OLD_ITALIC,         
  G_UNICODE_SCRIPT_ORIYA,              
  G_UNICODE_SCRIPT_RUNIC,              
  G_UNICODE_SCRIPT_SINHALA,            
  G_UNICODE_SCRIPT_SYRIAC,             
  G_UNICODE_SCRIPT_TAMIL,              
  G_UNICODE_SCRIPT_TELUGU,             
  G_UNICODE_SCRIPT_THAANA,             
  G_UNICODE_SCRIPT_THAI,               
  G_UNICODE_SCRIPT_TIBETAN,            
  G_UNICODE_SCRIPT_CANADIAN_ABORIGINAL, 
  G_UNICODE_SCRIPT_YI,                 
  G_UNICODE_SCRIPT_TAGALOG,            
  G_UNICODE_SCRIPT_HANUNOO,            
  G_UNICODE_SCRIPT_BUHID,              
  G_UNICODE_SCRIPT_TAGBANWA,           
  G_UNICODE_SCRIPT_BRAILLE,            
  G_UNICODE_SCRIPT_CYPRIOT,            
  G_UNICODE_SCRIPT_LIMBU,              
  G_UNICODE_SCRIPT_OSMANYA,            
  G_UNICODE_SCRIPT_SHAVIAN,            
  G_UNICODE_SCRIPT_LINEAR_B,           
  G_UNICODE_SCRIPT_TAI_LE,             
  G_UNICODE_SCRIPT_UGARITIC,           
  G_UNICODE_SCRIPT_NEW_TAI_LUE,        
  G_UNICODE_SCRIPT_BUGINESE,           
  G_UNICODE_SCRIPT_GLAGOLITIC,         
  G_UNICODE_SCRIPT_TIFINAGH,           
  G_UNICODE_SCRIPT_SYLOTI_NAGRI,       
  G_UNICODE_SCRIPT_OLD_PERSIAN,        
  G_UNICODE_SCRIPT_KHAROSHTHI,         
  G_UNICODE_SCRIPT_UNKNOWN,            
  G_UNICODE_SCRIPT_BALINESE,           
  G_UNICODE_SCRIPT_CUNEIFORM,          
  G_UNICODE_SCRIPT_PHOENICIAN,         
  G_UNICODE_SCRIPT_PHAGS_PA,           
  G_UNICODE_SCRIPT_NKO,                
  G_UNICODE_SCRIPT_KAYAH_LI,           
  G_UNICODE_SCRIPT_LEPCHA,             
  G_UNICODE_SCRIPT_REJANG,             
  G_UNICODE_SCRIPT_SUNDANESE,          
  G_UNICODE_SCRIPT_SAURASHTRA,         
  G_UNICODE_SCRIPT_CHAM,               
  G_UNICODE_SCRIPT_OL_CHIKI,           
  G_UNICODE_SCRIPT_VAI,                
  G_UNICODE_SCRIPT_CARIAN,             
  G_UNICODE_SCRIPT_LYCIAN,             
  G_UNICODE_SCRIPT_LYDIAN,             
  G_UNICODE_SCRIPT_AVESTAN,                
  G_UNICODE_SCRIPT_BAMUM,                  
  G_UNICODE_SCRIPT_EGYPTIAN_HIEROGLYPHS,   
  G_UNICODE_SCRIPT_IMPERIAL_ARAMAIC,       
  G_UNICODE_SCRIPT_INSCRIPTIONAL_PAHLAVI,  
  G_UNICODE_SCRIPT_INSCRIPTIONAL_PARTHIAN, 
  G_UNICODE_SCRIPT_JAVANESE,               
  G_UNICODE_SCRIPT_KAITHI,                 
  G_UNICODE_SCRIPT_LISU,                   
  G_UNICODE_SCRIPT_MEETEI_MAYEK,           
  G_UNICODE_SCRIPT_OLD_SOUTH_ARABIAN,      
  G_UNICODE_SCRIPT_OLD_TURKIC,             
  G_UNICODE_SCRIPT_SAMARITAN,              
  G_UNICODE_SCRIPT_TAI_THAM,               
  G_UNICODE_SCRIPT_TAI_VIET,               
  G_UNICODE_SCRIPT_BATAK,                  
  G_UNICODE_SCRIPT_BRAHMI,                 
  G_UNICODE_SCRIPT_MANDAIC,                
  G_UNICODE_SCRIPT_CHAKMA,                 
  G_UNICODE_SCRIPT_MEROITIC_CURSIVE,       
  G_UNICODE_SCRIPT_MEROITIC_HIEROGLYPHS,   
  G_UNICODE_SCRIPT_MIAO,                   
  G_UNICODE_SCRIPT_SHARADA,                
  G_UNICODE_SCRIPT_SORA_SOMPENG,           
  G_UNICODE_SCRIPT_TAKRI,                  
  G_UNICODE_SCRIPT_BASSA_VAH,              
  G_UNICODE_SCRIPT_CAUCASIAN_ALBANIAN,     
  G_UNICODE_SCRIPT_DUPLOYAN,               
  G_UNICODE_SCRIPT_ELBASAN,                
  G_UNICODE_SCRIPT_GRANTHA,                
  G_UNICODE_SCRIPT_KHOJKI,                 
  G_UNICODE_SCRIPT_KHUDAWADI,              
  G_UNICODE_SCRIPT_LINEAR_A,               
  G_UNICODE_SCRIPT_MAHAJANI,               
  G_UNICODE_SCRIPT_MANICHAEAN,             
  G_UNICODE_SCRIPT_MENDE_KIKAKUI,          
  G_UNICODE_SCRIPT_MODI,                   
  G_UNICODE_SCRIPT_MRO,                    
  G_UNICODE_SCRIPT_NABATAEAN,              
  G_UNICODE_SCRIPT_OLD_NORTH_ARABIAN,      
  G_UNICODE_SCRIPT_OLD_PERMIC,             
  G_UNICODE_SCRIPT_PAHAWH_HMONG,           
  G_UNICODE_SCRIPT_PALMYRENE,              
  G_UNICODE_SCRIPT_PAU_CIN_HAU,            
  G_UNICODE_SCRIPT_PSALTER_PAHLAVI,        
  G_UNICODE_SCRIPT_SIDDHAM,                
  G_UNICODE_SCRIPT_TIRHUTA,                
  G_UNICODE_SCRIPT_WARANG_CITI,            
  G_UNICODE_SCRIPT_AHOM,                   
  G_UNICODE_SCRIPT_ANATOLIAN_HIEROGLYPHS,  
  G_UNICODE_SCRIPT_HATRAN,                 
  G_UNICODE_SCRIPT_MULTANI,                
  G_UNICODE_SCRIPT_OLD_HUNGARIAN,          
  G_UNICODE_SCRIPT_SIGNWRITING,            
  G_UNICODE_SCRIPT_ADLAM,                  
  G_UNICODE_SCRIPT_BHAIKSUKI,              
  G_UNICODE_SCRIPT_MARCHEN,                
  G_UNICODE_SCRIPT_NEWA,                   
  G_UNICODE_SCRIPT_OSAGE,                  
  G_UNICODE_SCRIPT_TANGUT,                 
  G_UNICODE_SCRIPT_MASARAM_GONDI,          
  G_UNICODE_SCRIPT_NUSHU,                  
  G_UNICODE_SCRIPT_SOYOMBO,                
  G_UNICODE_SCRIPT_ZANABAZAR_SQUARE,       
  G_UNICODE_SCRIPT_DOGRA,                  
  G_UNICODE_SCRIPT_GUNJALA_GONDI,          
  G_UNICODE_SCRIPT_HANIFI_ROHINGYA,        
  G_UNICODE_SCRIPT_MAKASAR,                
  G_UNICODE_SCRIPT_MEDEFAIDRIN,            
  G_UNICODE_SCRIPT_OLD_SOGDIAN,            
  G_UNICODE_SCRIPT_SOGDIAN,                
  G_UNICODE_SCRIPT_ELYMAIC,                
  G_UNICODE_SCRIPT_NANDINAGARI,            
  G_UNICODE_SCRIPT_NYIAKENG_PUACHUE_HMONG, 
  G_UNICODE_SCRIPT_WANCHO,                 
  G_UNICODE_SCRIPT_CHORASMIAN,             
  G_UNICODE_SCRIPT_DIVES_AKURU,            
  G_UNICODE_SCRIPT_KHITAN_SMALL_SCRIPT,    
  G_UNICODE_SCRIPT_YEZIDI,                 
  G_UNICODE_SCRIPT_CYPRO_MINOAN,           
  G_UNICODE_SCRIPT_OLD_UYGHUR,             
  G_UNICODE_SCRIPT_TANGSA,                 
  G_UNICODE_SCRIPT_TOTO,                   
  G_UNICODE_SCRIPT_VITHKUQI,               
  G_UNICODE_SCRIPT_MATH,                   
} GUnicodeScript;
guint32        g_unicode_script_to_iso15924   (GUnicodeScript script);
GUnicodeScript g_unicode_script_from_iso15924 (guint32        iso15924);
gboolean g_unichar_isalnum   (gunichar c) ;
gboolean g_unichar_isalpha   (gunichar c) ;
gboolean g_unichar_iscntrl   (gunichar c) ;
gboolean g_unichar_isdigit   (gunichar c) ;
gboolean g_unichar_isgraph   (gunichar c) ;
gboolean g_unichar_islower   (gunichar c) ;
gboolean g_unichar_isprint   (gunichar c) ;
gboolean g_unichar_ispunct   (gunichar c) ;
gboolean g_unichar_isspace   (gunichar c) ;
gboolean g_unichar_isupper   (gunichar c) ;
gboolean g_unichar_isxdigit  (gunichar c) ;
gboolean g_unichar_istitle   (gunichar c) ;
gboolean g_unichar_isdefined (gunichar c) ;
gboolean g_unichar_iswide    (gunichar c) ;
gboolean g_unichar_iswide_cjk(gunichar c) ;
gboolean g_unichar_iszerowidth(gunichar c) ;
gboolean g_unichar_ismark    (gunichar c) ;
gunichar g_unichar_toupper (gunichar c) ;
gunichar g_unichar_tolower (gunichar c) ;
gunichar g_unichar_totitle (gunichar c) ;
gint g_unichar_digit_value (gunichar c) ;
gint g_unichar_xdigit_value (gunichar c) ;
GUnicodeType g_unichar_type (gunichar c) ;
GUnicodeBreakType g_unichar_break_type (gunichar c) ;
gint g_unichar_combining_class (gunichar uc) ;
gboolean g_unichar_get_mirror_char (gunichar ch,
                                    gunichar *mirrored_ch);
GUnicodeScript g_unichar_get_script (gunichar ch) ;
gboolean g_unichar_validate (gunichar ch) ;
gboolean g_unichar_compose (gunichar  a,
                            gunichar  b,
                            gunichar *ch);
gboolean g_unichar_decompose (gunichar  ch,
                              gunichar *a,
                              gunichar *b);
gsize g_unichar_fully_decompose (gunichar  ch,
                                 gboolean  compat,
                                 gunichar *result,
                                 gsize     result_len);
#define G_UNICHAR_MAX_DECOMPOSITION_LENGTH 18 
void g_unicode_canonical_ordering (gunichar *string,
                                   gsize     len);
gunichar *g_unicode_canonical_decomposition (gunichar  ch,
                                             gsize    *result_len);
 const gchar * const g_utf8_skip;
gboolean g_utf8_validate (const gchar  *str,
                          gssize        max_len,
                          const gchar **end);