Package_Tools/glib/Package_Tools/include-C/glib-2.0/glib/in_arbeit/gunicode.pp

{ Unicode 12.0 additions  }
{ Elym  }
{ Nand  }
{ Rohg  }
{ Wcho  }
{ Unicode 13.0 additions  }
{ Chrs  }
{ Diak  }
{ Kits  }
{ Yezi  }
{ Unicode 14.0 additions  }
{ Cpmn  }
{ Ougr  }
{ Tnsa  }
{ Toto  }
{ Vith  }
{ not really a Unicode script, but part of ISO 15924  }
{ Zmth  }
{ Unicode 15.0 additions  }
{  G_UNICODE_SCRIPT_KAWI GLIB_AVAILABLE_ENUMERATOR_IN_2_74,          /* Kawi */ }
{  G_UNICODE_SCRIPT_NAG_MUNDARI GLIB_AVAILABLE_ENUMERATOR_IN_2_74,   /* Nag Mundari */ }
type
  PGUnicodeScript = ^TGUnicodeScript;
  TGUnicodeScript =  Longint;
  Const
    G_UNICODE_SCRIPT_INVALID_CODE = -(1);
    G_UNICODE_SCRIPT_COMMON = 0;
    G_UNICODE_SCRIPT_INHERITED = 1;
    G_UNICODE_SCRIPT_ARABIC = 2;
    G_UNICODE_SCRIPT_ARMENIAN = 3;
    G_UNICODE_SCRIPT_BENGALI = 4;
    G_UNICODE_SCRIPT_BOPOMOFO = 5;
    G_UNICODE_SCRIPT_CHEROKEE = 6;
    G_UNICODE_SCRIPT_COPTIC = 7;
    G_UNICODE_SCRIPT_CYRILLIC = 8;
    G_UNICODE_SCRIPT_DESERET = 9;
    G_UNICODE_SCRIPT_DEVANAGARI = 10;
    G_UNICODE_SCRIPT_ETHIOPIC = 11;
    G_UNICODE_SCRIPT_GEORGIAN = 12;
    G_UNICODE_SCRIPT_GOTHIC = 13;
    G_UNICODE_SCRIPT_GREEK = 14;
    G_UNICODE_SCRIPT_GUJARATI = 15;
    G_UNICODE_SCRIPT_GURMUKHI = 16;
    G_UNICODE_SCRIPT_HAN = 17;
    G_UNICODE_SCRIPT_HANGUL = 18;
    G_UNICODE_SCRIPT_HEBREW = 19;
    G_UNICODE_SCRIPT_HIRAGANA = 20;
    G_UNICODE_SCRIPT_KANNADA = 21;
    G_UNICODE_SCRIPT_KATAKANA = 22;
    G_UNICODE_SCRIPT_KHMER = 23;
    G_UNICODE_SCRIPT_LAO = 24;
    G_UNICODE_SCRIPT_LATIN = 25;
    G_UNICODE_SCRIPT_MALAYALAM = 26;
    G_UNICODE_SCRIPT_MONGOLIAN = 27;
    G_UNICODE_SCRIPT_MYANMAR = 28;
    G_UNICODE_SCRIPT_OGHAM = 29;
    G_UNICODE_SCRIPT_OLD_ITALIC = 30;
    G_UNICODE_SCRIPT_ORIYA = 31;
    G_UNICODE_SCRIPT_RUNIC = 32;
    G_UNICODE_SCRIPT_SINHALA = 33;
    G_UNICODE_SCRIPT_SYRIAC = 34;
    G_UNICODE_SCRIPT_TAMIL = 35;
    G_UNICODE_SCRIPT_TELUGU = 36;
    G_UNICODE_SCRIPT_THAANA = 37;
    G_UNICODE_SCRIPT_THAI = 38;
    G_UNICODE_SCRIPT_TIBETAN = 39;
    G_UNICODE_SCRIPT_CANADIAN_ABORIGINAL = 40;
    G_UNICODE_SCRIPT_YI = 41;
    G_UNICODE_SCRIPT_TAGALOG = 42;
    G_UNICODE_SCRIPT_HANUNOO = 43;
    G_UNICODE_SCRIPT_BUHID = 44;
    G_UNICODE_SCRIPT_TAGBANWA = 45;
    G_UNICODE_SCRIPT_BRAILLE = 46;
    G_UNICODE_SCRIPT_CYPRIOT = 47;
    G_UNICODE_SCRIPT_LIMBU = 48;
    G_UNICODE_SCRIPT_OSMANYA = 49;
    G_UNICODE_SCRIPT_SHAVIAN = 50;
    G_UNICODE_SCRIPT_LINEAR_B = 51;
    G_UNICODE_SCRIPT_TAI_LE = 52;
    G_UNICODE_SCRIPT_UGARITIC = 53;
    G_UNICODE_SCRIPT_NEW_TAI_LUE = 54;
    G_UNICODE_SCRIPT_BUGINESE = 55;
    G_UNICODE_SCRIPT_GLAGOLITIC = 56;
    G_UNICODE_SCRIPT_TIFINAGH = 57;
    G_UNICODE_SCRIPT_SYLOTI_NAGRI = 58;
    G_UNICODE_SCRIPT_OLD_PERSIAN = 59;
    G_UNICODE_SCRIPT_KHAROSHTHI = 60;
    G_UNICODE_SCRIPT_UNKNOWN = 61;
    G_UNICODE_SCRIPT_BALINESE = 62;
    G_UNICODE_SCRIPT_CUNEIFORM = 63;
    G_UNICODE_SCRIPT_PHOENICIAN = 64;
    G_UNICODE_SCRIPT_PHAGS_PA = 65;
    G_UNICODE_SCRIPT_NKO = 66;
    G_UNICODE_SCRIPT_KAYAH_LI = 67;
    G_UNICODE_SCRIPT_LEPCHA = 68;
    G_UNICODE_SCRIPT_REJANG = 69;
    G_UNICODE_SCRIPT_SUNDANESE = 70;
    G_UNICODE_SCRIPT_SAURASHTRA = 71;
    G_UNICODE_SCRIPT_CHAM = 72;
    G_UNICODE_SCRIPT_OL_CHIKI = 73;
    G_UNICODE_SCRIPT_VAI = 74;
    G_UNICODE_SCRIPT_CARIAN = 75;
    G_UNICODE_SCRIPT_LYCIAN = 76;
    G_UNICODE_SCRIPT_LYDIAN = 77;
    G_UNICODE_SCRIPT_AVESTAN = 78;
    G_UNICODE_SCRIPT_BAMUM = 79;
    G_UNICODE_SCRIPT_EGYPTIAN_HIEROGLYPHS = 80;
    G_UNICODE_SCRIPT_IMPERIAL_ARAMAIC = 81;
    G_UNICODE_SCRIPT_INSCRIPTIONAL_PAHLAVI = 82;
    G_UNICODE_SCRIPT_INSCRIPTIONAL_PARTHIAN = 83;
    G_UNICODE_SCRIPT_JAVANESE = 84;
    G_UNICODE_SCRIPT_KAITHI = 85;
    G_UNICODE_SCRIPT_LISU = 86;
    G_UNICODE_SCRIPT_MEETEI_MAYEK = 87;
    G_UNICODE_SCRIPT_OLD_SOUTH_ARABIAN = 88;
    G_UNICODE_SCRIPT_OLD_TURKIC = 89;
    G_UNICODE_SCRIPT_SAMARITAN = 90;
    G_UNICODE_SCRIPT_TAI_THAM = 91;
    G_UNICODE_SCRIPT_TAI_VIET = 92;
    G_UNICODE_SCRIPT_BATAK = 93;
    G_UNICODE_SCRIPT_BRAHMI = 94;
    G_UNICODE_SCRIPT_MANDAIC = 95;
    G_UNICODE_SCRIPT_CHAKMA = 96;
    G_UNICODE_SCRIPT_MEROITIC_CURSIVE = 97;
    G_UNICODE_SCRIPT_MEROITIC_HIEROGLYPHS = 98;
    G_UNICODE_SCRIPT_MIAO = 99;
    G_UNICODE_SCRIPT_SHARADA = 100;
    G_UNICODE_SCRIPT_SORA_SOMPENG = 101;
    G_UNICODE_SCRIPT_TAKRI = 102;
    G_UNICODE_SCRIPT_BASSA_VAH = 103;
    G_UNICODE_SCRIPT_CAUCASIAN_ALBANIAN = 104;
    G_UNICODE_SCRIPT_DUPLOYAN = 105;
    G_UNICODE_SCRIPT_ELBASAN = 106;
    G_UNICODE_SCRIPT_GRANTHA = 107;
    G_UNICODE_SCRIPT_KHOJKI = 108;
    G_UNICODE_SCRIPT_KHUDAWADI = 109;
    G_UNICODE_SCRIPT_LINEAR_A = 110;
    G_UNICODE_SCRIPT_MAHAJANI = 111;
    G_UNICODE_SCRIPT_MANICHAEAN = 112;
    G_UNICODE_SCRIPT_MENDE_KIKAKUI = 113;
    G_UNICODE_SCRIPT_MODI = 114;
    G_UNICODE_SCRIPT_MRO = 115;
    G_UNICODE_SCRIPT_NABATAEAN = 116;
    G_UNICODE_SCRIPT_OLD_NORTH_ARABIAN = 117;
    G_UNICODE_SCRIPT_OLD_PERMIC = 118;
    G_UNICODE_SCRIPT_PAHAWH_HMONG = 119;
    G_UNICODE_SCRIPT_PALMYRENE = 120;
    G_UNICODE_SCRIPT_PAU_CIN_HAU = 121;
    G_UNICODE_SCRIPT_PSALTER_PAHLAVI = 122;
    G_UNICODE_SCRIPT_SIDDHAM = 123;
    G_UNICODE_SCRIPT_TIRHUTA = 124;
    G_UNICODE_SCRIPT_WARANG_CITI = 125;
    G_UNICODE_SCRIPT_AHOM = 126;
    G_UNICODE_SCRIPT_ANATOLIAN_HIEROGLYPHS = 127;
    G_UNICODE_SCRIPT_HATRAN = 128;
    G_UNICODE_SCRIPT_MULTANI = 129;
    G_UNICODE_SCRIPT_OLD_HUNGARIAN = 130;
    G_UNICODE_SCRIPT_SIGNWRITING = 131;
    G_UNICODE_SCRIPT_ADLAM = 132;
    G_UNICODE_SCRIPT_BHAIKSUKI = 133;
    G_UNICODE_SCRIPT_MARCHEN = 134;
    G_UNICODE_SCRIPT_NEWA = 135;
    G_UNICODE_SCRIPT_OSAGE = 136;
    G_UNICODE_SCRIPT_TANGUT = 137;
    G_UNICODE_SCRIPT_MASARAM_GONDI = 138;
    G_UNICODE_SCRIPT_NUSHU = 139;
    G_UNICODE_SCRIPT_SOYOMBO = 140;
    G_UNICODE_SCRIPT_ZANABAZAR_SQUARE = 141;
    G_UNICODE_SCRIPT_DOGRA = 142;
    G_UNICODE_SCRIPT_GUNJALA_GONDI = 143;
    G_UNICODE_SCRIPT_HANIFI_ROHINGYA = 144;
    G_UNICODE_SCRIPT_MAKASAR = 145;
    G_UNICODE_SCRIPT_MEDEFAIDRIN = 146;
    G_UNICODE_SCRIPT_OLD_SOGDIAN = 147;
    G_UNICODE_SCRIPT_SOGDIAN = 148;
    G_UNICODE_SCRIPT_ELYMAIC = 149;
    G_UNICODE_SCRIPT_NANDINAGARI = 150;
    G_UNICODE_SCRIPT_NYIAKENG_PUACHUE_HMONG = 151;
    G_UNICODE_SCRIPT_WANCHO = 152;
    G_UNICODE_SCRIPT_CHORASMIAN = 153;
    G_UNICODE_SCRIPT_DIVES_AKURU = 154;
    G_UNICODE_SCRIPT_KHITAN_SMALL_SCRIPT = 155;
    G_UNICODE_SCRIPT_YEZIDI = 156;
    G_UNICODE_SCRIPT_CYPRO_MINOAN = 157;
    G_UNICODE_SCRIPT_OLD_UYGHUR = 158;
    G_UNICODE_SCRIPT_TANGSA = 159;
    G_UNICODE_SCRIPT_TOTO = 160;
    G_UNICODE_SCRIPT_VITHKUQI = 161;
    G_UNICODE_SCRIPT_MATH = 162;
;

function g_unicode_script_to_iso15924(script:TGUnicodeScript):Tguint32;cdecl;external;
function g_unicode_script_from_iso15924(iso15924:Tguint32):TGUnicodeScript;cdecl;external;
{ These are all analogs of the <ctype.h> functions.
  }
function g_unichar_isalnum(c:Tgunichar):Tgboolean;cdecl;external;
function g_unichar_isalpha(c:Tgunichar):Tgboolean;cdecl;external;
function g_unichar_iscntrl(c:Tgunichar):Tgboolean;cdecl;external;
function g_unichar_isdigit(c:Tgunichar):Tgboolean;cdecl;external;
function g_unichar_isgraph(c:Tgunichar):Tgboolean;cdecl;external;
function g_unichar_islower(c:Tgunichar):Tgboolean;cdecl;external;
function g_unichar_isprint(c:Tgunichar):Tgboolean;cdecl;external;
function g_unichar_ispunct(c:Tgunichar):Tgboolean;cdecl;external;
function g_unichar_isspace(c:Tgunichar):Tgboolean;cdecl;external;
function g_unichar_isupper(c:Tgunichar):Tgboolean;cdecl;external;
function g_unichar_isxdigit(c:Tgunichar):Tgboolean;cdecl;external;
function g_unichar_istitle(c:Tgunichar):Tgboolean;cdecl;external;
function g_unichar_isdefined(c:Tgunichar):Tgboolean;cdecl;external;
function g_unichar_iswide(c:Tgunichar):Tgboolean;cdecl;external;
function g_unichar_iswide_cjk(c:Tgunichar):Tgboolean;cdecl;external;
function g_unichar_iszerowidth(c:Tgunichar):Tgboolean;cdecl;external;
function g_unichar_ismark(c:Tgunichar):Tgboolean;cdecl;external;
{ More <ctype.h> functions.  These convert between the three cases.
 * See the Unicode book to understand title case.   }
function g_unichar_toupper(c:Tgunichar):Tgunichar;cdecl;external;
function g_unichar_tolower(c:Tgunichar):Tgunichar;cdecl;external;
function g_unichar_totitle(c:Tgunichar):Tgunichar;cdecl;external;
{ If C is a digit (according to 'g_unichar_isdigit'), then return its
   numeric value.  Otherwise return -1.   }
function g_unichar_digit_value(c:Tgunichar):Tgint;cdecl;external;
function g_unichar_xdigit_value(c:Tgunichar):Tgint;cdecl;external;
{ Return the Unicode character type of a given character.   }
function g_unichar_type(c:Tgunichar):TGUnicodeType;cdecl;external;
{ Return the line break property for a given character  }
function g_unichar_break_type(c:Tgunichar):TGUnicodeBreakType;cdecl;external;
{ Returns the combining class for a given character  }
function g_unichar_combining_class(uc:Tgunichar):Tgint;cdecl;external;
function g_unichar_get_mirror_char(ch:Tgunichar; mirrored_ch:Pgunichar):Tgboolean;cdecl;external;
function g_unichar_get_script(ch:Tgunichar):TGUnicodeScript;cdecl;external;
{ Validate a Unicode character  }
function g_unichar_validate(ch:Tgunichar):Tgboolean;cdecl;external;
{ Pairwise canonical compose/decompose  }
function g_unichar_compose(a:Tgunichar; b:Tgunichar; ch:Pgunichar):Tgboolean;cdecl;external;
function g_unichar_decompose(ch:Tgunichar; a:Pgunichar; b:Pgunichar):Tgboolean;cdecl;external;
function g_unichar_fully_decompose(ch:Tgunichar; compat:Tgboolean; result:Pgunichar; result_len:Tgsize):Tgsize;cdecl;external;
{*
 * G_UNICHAR_MAX_DECOMPOSITION_LENGTH:
 *
 * The maximum length (in codepoints) of a compatibility or canonical
 * decomposition of a single Unicode character.
 *
 * This is as defined by Unicode 6.1.
 *
 * Since: 2.32
  }
{ codepoints  }
const
  G_UNICHAR_MAX_DECOMPOSITION_LENGTH = 18;  
{ Compute canonical ordering of a string in-place.  This rearranges
   decomposed characters in the string according to their combining
   classes.  See the Unicode manual for more information.   }

procedure g_unicode_canonical_ordering(_string:Pgunichar; len:Tgsize);cdecl;external;
function g_unicode_canonical_decomposition(ch:Tgunichar; result_len:Pgsize):Pgunichar;cdecl;external;
{ Array of skip-bytes-per-initial character.
  }
(* Const before type ignored *)
(* Const before declarator ignored *)
  var
    g_utf8_skip : Pgchar;cvar;public;
{*
 * g_utf8_next_char:
 * @p: Pointer to the start of a valid UTF-8 character
 *
 * Skips to the next character in a UTF-8 string.
 *
 * The string must be valid; this macro is as fast as possible, and has
 * no error-checking.
 *
 * You would use this macro to iterate over a string character by character.
 *
 * The macro returns the start of the next UTF-8 character.
 *
 * Before using this macro, use g_utf8_validate() to validate strings
 * that may contain invalid UTF-8.
  }
{#define g_utf8_next_char(p) (char *)((p) + g_utf8_skip[*(const guchar *)(p)]) }
(* Const before type ignored *)
